--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <!-- head -->
+    <link rel="stylesheet" href="/css/syntax.css">
     {{ partial "head" }}
     <link rel="stylesheet" href="/css/single.css">
 </head>
