--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,6 +4,8 @@
     <!-- head -->
     <link rel="stylesheet" href="/css/syntax.css">
     {{ partial "head" }}
+    <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+    <script>mermaid.initialize({startOnLoad:true});</script>
     <link rel="stylesheet" href="/css/single.css">
 </head>
 <body class="container">
